@startuml
hide methods
left to right direction
'skinparam linetype ortho

Title "Domain Model - Register a Customer"

skinparam class {
    LifeLineBorderColor DarkBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FFFF
    ArrowColor grey
    BorderColor black
}

skinparam packageStyle rectangle

skinparam card {
    LifeLineBorderColor Green
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FFDD
    ArrowColor DarkGrey
    BorderColor Black
}


package "Customer Manager Aggregate"{
entity CustomerManager <<entity>><<root>>

}

package "Customer Aggregate"{
entity Customer <<entity>><<root>>

    card EmailAddress <<Value Object>>{
    }

    Customer --> EmailAddress
}

package "User Aggregate"{
entity User <<entity>><<root>>

    card UserEmail <<Value Object>> {
    }
    card UserName <<Value Object>> {
    }
    card UserPassword <<Value Object>> {
    }
    card Username<<Value Object>> {
    }

    User --> UserEmail
    User --> UserName
    User --> Username
    User --> UserPassword

}

package "Company Aggregate" {
    entity Company <<entity>><<root>>

    card CompanyName <<Value Object>>{
    }
    card CompanyNumber <<Value Object>>{
    }

    Company --> CompanyName
    Company --> CompanyNumber
}

    CustomerManager ---> User
    CustomerManager "1" ---> "N" Customer : registers
    Customer ---> User
    Customer "N" --> "1" Company : associated <

@enduml